--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,8 @@ compileJava {
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.21'
-    compile 'org.mybatis:mybatis:3.4.4'
     compile 'org.springframework.boot:spring-boot-starter-web:1.5.3.RELEASE'
+    compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0'
     runtime files('libs/ojdbc7.jar')
 
     testCompile 'junit:junit:4.12'
