--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ compileJava {
 }
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.21'
+    compile 'org.apache.logging.log4j:log4j-api:2.8.2'
     compile 'org.springframework.boot:spring-boot-starter-web:1.5.3.RELEASE'
     compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0'
     runtime files('libs/ojdbc7.jar')
