--- a/build.gradle
+++ b/build.gradle
@@ -36,14 +36,5 @@ dependencies {
     compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0'
     runtime files('libs/ojdbc7.jar')
 
-    testCompile 'junit:junit:4.12'
-}
-
-jar {
-  manifest {
-    attributes(
-      'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-      'Main-Class': 'cn.wenjun.learning.App'
-    )
-  }
+    testCompile("org.springframework.boot:spring-boot-starter-test")
 }
