--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,11 @@ apply plugin: 'org.flywaydb.flyway'
 apply plugin: 'org.springframework.boot'
 
 
-compileJava {
-    sourceCompatibility = "1.8"
-    targetCompatibility = "1.8"
-}
-
 dependencies {
     compile 'org.apache.logging.log4j:log4j-api:2.8.2'
     compile 'org.springframework.boot:spring-boot-starter-web:1.5.3.RELEASE'
     compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0'
+    compile 'org.projectlombok:lombok:1.16.16'
     runtime files('libs/ojdbc7.jar')
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
