--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,16 @@ apply plugin: 'idea'
 apply plugin: 'org.flywaydb.flyway'
 apply plugin: 'org.springframework.boot'
 
+sourceSets {
+    integrationTest {
+        java {
+            compileClasspath += main.output + test.output
+            runtimeClasspath += main.output + test.output
+            srcDir file('src/integrationTest/java')
+        }
+        resources.srcDir file('src/integrationTest/resources')
+    }
+}
 
 dependencies {
     compile 'org.apache.logging.log4j:log4j-api:2.8.2'
@@ -31,6 +41,21 @@ dependencies {
     compile 'org.projectlombok:lombok:1.16.16'
     runtime files('libs/ojdbc7.jar')
 
-    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('com.ninja-squad:DbSetup:2.1.0')
+
+    integrationTestCompile sourceSets.main.output
+    integrationTestCompile sourceSets.test.output
+
+    integrationTestCompile configurations.compile
+    integrationTestCompile configurations.testCompile
+
+    integrationTestRuntime configurations.runtime
+    integrationTestRuntime configurations.testRuntime
+}
+
+
+task integrationTest(type: Test) {
+    testClassesDir = sourceSets.integrationTest.output.classesDir
+    classpath = sourceSets.integrationTest.runtimeClasspath
 }
